[package]
name = "image-pixel-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
color-hex = "0.2.0"
csscolorparser = "0.6.2"
image = "0.24.7"
log = "0.4.20"
